<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/errorContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:viewBindingType="android.view.ViewGroup"
    >

    <TextView
        android:id="@+id/nablaErrorTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?textAppearanceTitleMedium"
        tools:text="@string/nabla_error_message_generic_title"
        />

    <TextView
        android:id="@+id/nablaErrorBodyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="?textAppearanceBodyMedium"
        tools:text="@string/nabla_error_message_generic_body"
        />

    <Button
        android:id="@+id/nablaErrorRetryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nabla_error_retry_cta"
        />

</LinearLayout>
