<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="20dp"
    android:paddingVertical="20dp"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:cardBackgroundColor="?colorSurface"
        app:cardCornerRadius="?nablaRoundedCornersRadius"
        app:cardElevation="0dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:id="@+id/chatMediaSourcePickerOptionCameraPicture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables"
            >

                <ImageView
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_margin="16dp"
                    android:background="?nablaMessaging_conversationMediaPickerIconBackground"
                    android:src="?nablaMessaging_mediaSourceCameraPhotoIcon"
                    tools:ignore="ContentDescription"
                />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nabla_conversation_attachment_media_picker_camera_photo"
                    android:textAppearance="?nablaMessaging_conversationMediaPickerTextAppearance"
                />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/chatMediaSourcePickerOptionCameraVideo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables"
            >

                <ImageView
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_margin="16dp"
                    android:background="?nablaMessaging_conversationMediaPickerIconBackground"
                    android:src="?nablaMessaging_mediaSourceCameraVideoIcon"
                    tools:ignore="ContentDescription"
                />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nabla_conversation_attachment_media_picker_camera_video"
                    android:textAppearance="?nablaMessaging_conversationMediaPickerTextAppearance"
                />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/chatMediaSourcePickerOptionLibrary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables"
                >

                <ImageView
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_margin="16dp"
                    android:background="?nablaMessaging_conversationMediaPickerIconBackground"
                    android:src="?nablaMessaging_mediaSourceGalleryIcon"
                    tools:ignore="ContentDescription"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nabla_conversation_attachment_media_picker_photos_library"
                    android:textAppearance="?nablaMessaging_conversationMediaPickerTextAppearance"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/chatMediaSourcePickerOptionFile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables"
                >

                <ImageView
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_margin="16dp"
                    android:background="?nablaMessaging_conversationMediaPickerIconBackground"
                    android:src="?nablaMessaging_mediaSourceDocumentIcon"
                    tools:ignore="ContentDescription"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nabla_conversation_attachment_media_picker_documents"
                    android:textAppearance="?nablaMessaging_conversationMediaPickerTextAppearance"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/chatMediaSourcePickerOptionDocScan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables"
                >

                <ImageView
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_margin="16dp"
                    android:background="?nablaMessaging_conversationMediaPickerIconBackground"
                    android:src="?nablaMessaging_mediaSourceDocumentScanIcon"
                    tools:ignore="ContentDescription"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nabla_conversation_attachment_media_picker_document_scanner"
                    android:textAppearance="?nablaMessaging_conversationMediaPickerTextAppearance"
                    />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>